[gd_scene load_steps=5 format=3 uid="uid://b2jr010lqt33y"]

[ext_resource type="Script" path="res://td_enemy.gd" id="1_5tlet"]
[ext_resource type="Texture2D" uid="uid://blu5ma7ledgm0" path="res://assets/log.png" id="2_7gjmh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n3sab"]
radius = 7.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7maap"]
size = Vector2(18, 24)

[node name="td_enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_5tlet")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7gjmh")
hframes = 6
vframes = 4
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_n3sab")

[node name="AttackBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0.188235, 0.137255, 1)
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_7maap")

[node name="RayCast R" type="RayCast2D" parent="."]
target_position = Vector2(-48, -24)

[node name="RayCastM" type="RayCast2D" parent="."]
target_position = Vector2(-50, 0)

[node name="RayCastL" type="RayCast2D" parent="."]
target_position = Vector2(-48, 24)
